# astropedija

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  install.bat  pyproject.toml  run_tests.bat  run_tests.sh
apps/api/alembic/: env.py
apps/api/app/: config.py  main.py
apps/api/app/db/: database.py  models.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: ai.py  auth.py  calculate.py  charts.py  geo.py  horoscopes.py  share.py  sky.py
apps/api/app/services/: ai_service.py  auth_service.py  chart_interpreter.py  chart_service.py  chart_storage.py  compatibility_service.py  davison_service.py  horoscope_generator.py  pattern_service.py  planet_service.py  progression_service.py  transit_alert_service.py  transit_weather.py
apps/api/app/utils/: svg_processor.py
apps/api/tests/: conftest.py  test_calculate.py  test_charts.py  test_geo.py  test_health.py  test_horoscopes.py  test_sky.py
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
content/aspekti/: konjunkcija.mdx  kvadrat.mdx  kvinkunks.mdx  opozicija.mdx  sekstil.mdx  semi-kvadrat.mdx  semi-sekstil.mdx  trigon.mdx
content/kuce-po-znakovima/: 1-kuca-u-biku.mdx  1-kuca-u-blizancima.mdx  1-kuca-u-devici.mdx  1-kuca-u-jarcu.mdx  1-kuca-u-lavu.mdx  1-kuca-u-ovnu.mdx  1-kuca-u-raku.mdx  1-kuca-u-ribama.mdx  1-kuca-u-skorpiji.mdx  1-kuca-u-strelcu.mdx  1-kuca-u-vagi.mdx  1-kuca-u-vodoliji.mdx  10-kuca-u-biku.mdx  10-kuca-u-blizancima.mdx  10-kuca-u-devici.mdx  10-kuca-u-jarcu.mdx  (+128 more)
(+686 files in other folders)
